force-app/main/default/objects/Clean_Flow_Toast_Event__e/Clean_Flow_Toast_Event__e.object-meta.xml
<CustomObject>
    <label>Clean Flow Toast Event</label>
    <pluralLabel>Clean Flow Toast Events</pluralLabel>
</CustomObject>