force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Toast notification message body</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>