force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Toast mode: dismissible, pester, sticky</description>
    <label>Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>