force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Play_Sound__c.field-meta.xml
<CustomField>
    <fullName>Play_Sound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to play sound chime on toast receipt</description>
    <label>Play Sound</label>
    <type>Checkbox</type>
</CustomField>