force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Target Salesforce Record ID for navigation</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>