force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Sound_Type__c.field-meta.xml
<CustomField>
    <fullName>Sound_Type__c</fullName>
    <description>Sound chime type (e.g., chime, success, bell, warning, error)</description>
    <label>Sound Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>