force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Target_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Id__c</fullName>
    <description>Optional User ID to target specific user. If blank, broadcasts to all active listeners.</description>
    <label>Target User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>