force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Optional hyperlink URL for the toast</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>