force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Url_Label__c.field-meta.xml
<CustomField>
    <fullName>Url_Label__c</fullName>
    <description>Label for the URL link</description>
    <label>URL Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>