force-app/main/default/objects/Clean_Flow_Toast_Event__e/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>Toast variant: success, error, warning, info</description>
    <label>Variant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>